[package]
name = "load_balancer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "1.7.0", features = ["full"] }
hyper-util = { version = "0.1.17", features = ["full"] }
http-body-util = "0.1.3"
tokio = { version = "1.48.0", features = ["full"] }
tower = { version = "0.5.2", features = ["full"] }
serde_json = "1.0.149"
bytes = "1.10.1"
chrono = "0.4.44"
reqwest = "0.13.2"
color-eyre = "0.6.5"
strum = { version = "0.26", features = ["derive"] }
axum = "0.8.8"
